# ChangeLog for sys-apps/fakeroot
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/fakeroot/ChangeLog,v 1.54 2010/01/07 21:51:02 fauli Exp $

  07 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  fakeroot-1.12.4.ebuild:
  Transfer Prefix keywords

  21 Nov 2009; Markus Meier <maekke@gentoo.org> fakeroot-1.12.4.ebuild:
  x86 stable, bug #289536

  13 Nov 2009; Tiago Cunha <tcunha@gentoo.org> fakeroot-1.12.4.ebuild:
  stable sparc, bug 289536

  11 Nov 2009; Jeroen Roovers <jer@gentoo.org> fakeroot-1.12.4.ebuild:
  Stable for HPPA (bug #289536).

  24 Oct 2009; Tobias Klausmann <klausman@gentoo.org>
  fakeroot-1.12.4.ebuild:
  Stable on alpha, bug #289536

  24 Oct 2009; nixnut <nixnut@gentoo.org> fakeroot-1.12.4.ebuild:
  ppc stable #289536

  23 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
  fakeroot-1.12.4.ebuild:
  amd64 stable wrt #289536

*fakeroot-1.12.4 (25 Jun 2009)

  25 Jun 2009; Mike Frysinger <vapier@gentoo.org> +fakeroot-1.12.4.ebuild:
  Version bump #275350 by Tim Harder.

  16 Nov 2008; Jeroen Roovers <jer@gentoo.org> fakeroot-1.9.1.ebuild:
  Stable for HPPA (bug #246133).

  09 Nov 2008; Raúl Porcel <armin76@gentoo.org> fakeroot-1.9.1.ebuild:
  alpha/sparc stable wrt #246133

  09 Nov 2008; nixnut <nixnut@gentoo.org> fakeroot-1.9.1.ebuild:
  Stable on ppc wrt bug 246133

  09 Nov 2008; Markus Meier <maekke@gentoo.org> fakeroot-1.9.1.ebuild:
  amd64/x86 stable, bug #246133

*fakeroot-1.10.1 (09 Nov 2008)

  09 Nov 2008; Mike Frysinger <vapier@gentoo.org> +fakeroot-1.10.1.ebuild:
  Version bump.

  25 Jan 2008; Samuli Suominen <drac@gentoo.org> fakeroot-1.8.1.ebuild:
  amd64 stable wrt #206711

*fakeroot-1.9.1 (23 Jan 2008)

  23 Jan 2008; Mike Frysinger <vapier@gentoo.org> +fakeroot-1.9.1.ebuild:
  Version bump.

  23 Jan 2008; Mike Frysinger <vapier@gentoo.org> fakeroot-1.9.ebuild:
  Force CONFIG_SHELL to /bin/sh to workaround #206944 while we get things
  sorted upstream.
