@@ -1,18 +1,24 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-DIST fakeroot_1.10.1.tar.gz 396593 RMD160 45bfc17fc37a3da17fda7174c2a7f9819e10f1bb SHA1 a37cb027bd0fc026a47682a4de52fbf796ebcec6 SHA256 67235ca9c6ee3e9d393d5cfa9b93d493f1def3ed1f752c7232bf4d526d14c7cf
-DIST fakeroot_1.12.4.tar.gz 398481 RMD160 4e0080b559fbf2839189f52091505e6ecac3e164 SHA1 b729d690bce93ebeb1f436d3ee7cf16169114243 SHA256 dbcab1f495b857e67feff882e018ca59958b8d189ff1f76684d28e35463ec29d
-DIST fakeroot_1.9.1.tar.gz 388180 RMD160 c16ccb1aae5af9e636ec82f3dbc8d04ad15264d1 SHA1 f61ce6904aceadbc3137b748b9c1a6e008e8514f SHA256 6a3a993ab90540719e47b4968f60f8023a3cbb93f2a1ce611cd7a2d52ac1c38e
-EBUILD fakeroot-1.10.1.ebuild 757 RMD160 3698ff81b724e2bd515a0c72c304728eccfaaa7b SHA1 0e5f9ae12291f7824ae518aa12a32c57a2ddb0d8 SHA256 f5d2a42e46e8ea9b43927d9ab0454f6e05b256982cd7fb4e524ed549fff12d1d
-EBUILD fakeroot-1.12.4.ebuild 670 RMD160 b2df3336f7bf3c5fb7c0c7850f566faf428fcade SHA1 8ce9ace92e57c712ef1d82084158e1eefb0b6b7b SHA256 b39a6060879848e25ab7845a1c869dbf36d1b4d1f148ecb7cbde2bbd14e86b0a
-EBUILD fakeroot-1.9.1.ebuild 747 RMD160 9441ec60109928e5565437561a6c9f6490d6c7e4 SHA1 fd796229874f61fba50fb4cd90c6489f5218767a SHA256 395cbd1b6c12f1dea330c025a38381e5b25bb13e5c025cebdc953b1a4bcd418e
-MISC ChangeLog 6226 RMD160 3abf3ece51cb86d6e1a2d52c251712662fdbae69 SHA1 5c5ae6e9ba2f5d428cb2518e094b6f17c808a9a1 SHA256 cb1a5746810efbe6d54145c794c265d80a96555bebd97b5f54e273dac24b8b10
+DIST fakeroot_1.14.4.orig.tar.bz2 280223 RMD160 821a48ca2db3e385b7e993ad29f1ab4d006d8120 SHA1 80fd293a3969e6ee8dbae0a979a5e817a9a6c7f3 SHA256 3236394b2f280637bc977515e46e66cf999e1db74ea7402048e64113b70b9660
+EBUILD fakeroot-1.14.4.ebuild 581 RMD160 2ab15ebcf43e9906898992f6bd353c69f019132c SHA1 7155c7e8c8ca3a208568913d88c89f1cde8e42ba SHA256 2fa0b7ceb1c435d124363304f927cee7af938c247282436782f2a449e3dfbd61
+MISC ChangeLog 6520 RMD160 50b82ca869feb4eb64f04075452a11b517aa5ae6 SHA1 eb4c2a4d49798be1ef1aa2069b20d52790b75931 SHA256 5b46a91e5dd10bf04354655a266a0c7ada179053bfcb840a6e93492cb3fd185a
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.11 (GNU/Linux)
+Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAktGV0sACgkQNQqtfCuFneMHMACcCi01mrx8xOWiOPoYvkcWWejk
-l6cAn15X68xAWDazZnsSg6ycmyF+MOhz
-=Oot5
+iQIcBAEBCAAGBQJMnNn5AAoJEHQ6UuhrqBBQ+kEQAIfY5HLeR/5C1k5FWBAfX+Y9
+zTzEmhchXxeoQczeWUIqZsuX6QYVR8lwMkDZPqw4NAjfP8xvMgqrFy6/bmtPsccU
+le7JLEkJYt22IMzqXfoET7GF+JEXw3uUFEE5yDCfHFqZjSUPY9Rp8MrtuHB7BeKt
+MMhnM4aGm7JO8MZ1fOOoXtyhnotCd8UfeYU0t0PPnUJ8iGYhg+mPWN+jCSXtZu8o
+qFeo+OXUg2Gx1E8DrlbXm78d7upoDNc59dn2ld1g1FkZ6jsOcRNOpMssTInfTMF7
+ZHDrFUIMInqbkUzupDjFNN2yo62PWr5JCxDPKwhokkZ8GQorbTlAf+2+wy1KCz4j
+dMqd4vKXuo0f/nRwuTYQ3CbgUxQ6t9f+I8n7lBtwH8K6sHhZKd4GAxuaLlZ7TYny
+5LQE5eKL9P5Yvz/dC0784ePhs4KrzoIysyZnhnybbcnsgSWzS8BK5+XhspK6trIf
+3VvUdJGPosaEVpSCVvUwyPniQMj56eiivY35R46ndHVc7wynOM0SRvBhzAIMiYaU
+6UXcbxvuLyecB24QicTMJQD5B1GgU1Horb7eUETa2JR09kiyusvOHd/nnnsINstg
+sOjxYkeuHbTOrF9RCrZXC4YvGmS+zHu4x7/GZqGRPFjXx0MD74rUduTWnsVFLa3G
+3u6R4LQqCi0oMv9YxRaP
+=A+Dh
 -----END PGP SIGNATURE-----
