@@ -1,14 +1,14 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/fakeroot/fakeroot-1.12.4.ebuild,v 1.8 2010/01/07 21:51:02 fauli Exp $
+# $Header: $
 
 DESCRIPTION="Run commands in an environment faking root privileges"
 HOMEPAGE="http://packages.qa.debian.org/f/fakeroot.html"
-SRC_URI="mirror://debian/pool/main/f/fakeroot/${PF/-/_}.tar.gz"
+SRC_URI="mirror://debian/pool/main/f/fakeroot/${PF/-/_}.orig.tar.bz2"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="alpha amd64 hppa ppc sparc x86 ~amd64-linux ~x86-linux"
+KEYWORDS="~alpha ~amd64 ~hppa ~ppc ~sparc ~x86 ~amd64-linux ~x86-linux"
 IUSE="test"
 
 RDEPEND=""
