@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sys-apps/fakeroot/ChangeLog,v 1.54 2010/01/07 21:51:02 fauli Exp $
 
+  24 Sep 2010; Nathan Phillip Brink (ohnobinki)
+  <ohnobinki@ohnopublishing.net> -fakeroot-1.9.1.ebuild,
+  -fakeroot-1.10.1.ebuild, -fakeroot-1.12.4.ebuild, +fakeroot-1.14.4.ebuild:
+  Drop old versions. Bump to fakeroot-1.14.4 for bug 305629 with patch by
+  Tim Harder <radhermit@gentoo.org>.
+
   07 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
   fakeroot-1.12.4.ebuild:
   Transfer Prefix keywords
